feat: create route find by cpf
