# api/controllers/accountController.go
@@ -10,12 +10,16 @@ import (
 )
 
 type AccountController struct {
-	CreateAccountUseCase usecases.CreateAccountUseCase
+	CreateAccountUseCase    usecases.CreateAccountUseCase
+	FindAccountByCPFUseCase usecases.FindAccountByCPFUseCase
 }
 
-func NewControllerAccount(createAccountUseCase usecases.CreateAccountUseCase) *AccountController {
+func NewControllerAccount(
+	createAccountUseCase usecases.CreateAccountUseCase,
+	findAccountByCPFUseCase usecases.FindAccountByCPFUseCase) *AccountController {
 	return &AccountController{
-		CreateAccountUseCase: createAccountUseCase,
+		CreateAccountUseCase:    createAccountUseCase,
+		FindAccountByCPFUseCase: findAccountByCPFUseCase,
 	}
 }
 
@@ -53,4 +57,29 @@ func (ac *AccountController) CreateAccount(ctx *gin.Context) {
 		return
 	}
 	ctx.JSON(http.StatusCreated, createdAccountDTO)
+}
+
+// FindAccountByCPF godoc
+// @Summary Find account by CPF
+// @Description Find account using the Brazilian individual taxpayer registry identification number (CPF)
+// @Tags Accounts
+// @Accept json
+// @Produce json
+// @Param cpf path string true "Brazilian individual taxpayer registry identification number (CPF)"
+// @Success 200 {object} usecases.FindAccountByCPFResponseDTO "Account found successfully"
+// @Failure 400 {object} dtos.HttpErrorDTO
+// @Failure 404 {object} dtos.HttpErrorDTO
+// @Failure 500 {object} dtos.HttpErrorDTO
+// @Router /accounts/{cpf} [get]
+func (ac *AccountController) FindAccountByCPF(ctx *gin.Context) {
+	createdAccountDTO, err := ac.FindAccountByCPFUseCase.Execute(ctx.Param("cpf"))
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, &dtos.HttpErrorDTO{
+			StatusCode: 400,
+			Reason:     err.Error(),
+			Timestamp:  time.Now(),
+		})
+		return
+	}
+	ctx.JSON(http.StatusOK, createdAccountDTO)
 }
