# docs/swagger.yaml
@@ -41,6 +41,23 @@ definitions:
       phoneNumber:
         type: string
     type: object
+  usecases.FindAccountByCPFResponseDTO:
+    properties:
+      balance:
+        type: number
+      birthdate:
+        type: string
+      cpf:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      phoneNumber:
+        type: string
+    type: object
 info:
   contact:
     email: patrick@mybank.com.br
@@ -82,6 +99,41 @@ paths:
           schema:
             $ref: '#/definitions/dtos.HttpErrorDTO'
       summary: Create a new account
+      tags:
+      - Accounts
+  /accounts/{cpf}:
+    get:
+      consumes:
+      - application/json
+      description: Find account using the Brazilian individual taxpayer registry identification
+        number (CPF)
+      parameters:
+      - description: Brazilian individual taxpayer registry identification number
+          (CPF)
+        in: path
+        name: cpf
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Account found successfully
+          schema:
+            $ref: '#/definitions/usecases.FindAccountByCPFResponseDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.HttpErrorDTO'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dtos.HttpErrorDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dtos.HttpErrorDTO'
+      summary: Find account by CPF
       tags:
       - Accounts
 swagger: "2.0"
